<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/rLayout"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/layout_header"
        android:padding="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/lbl_jobno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_jobno"
            android:textSize="@dimen/textsize_small"
            style="@style/lbl_history"

            />
        <TextView
            android:layout_weight="1"
            android:id="@+id/lbl_datetime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lbl_datetime"
            style="@style/lbl_history"
            android:textSize="@dimen/textsize_small"
            android:gravity="center"
            />
        <TextView
            android:layout_weight="1"
            android:id="@+id/lbl_fare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lbl_fare"
            style="@style/lbl_history"
            android:textSize="@dimen/textsize_small"
            android:gravity="center"
            />
        <TextView
            android:layout_weight="1"
            android:id="@+id/lbl_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lbl_status"
            style="@style/lbl_history"
            android:textSize="@dimen/textsize_small"
            android:gravity="center"
            />
    </LinearLayout>
       <ListView
           android:layout_below="@+id/layout_header"
           android:background="#ffffff"
           android:id="@+id/listview_history"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:divider="#d3d3d3"
           android:dividerHeight="1dp">

         </ListView>
</RelativeLayout>