<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="0.04">

        <TextView
            android:id="@+id/are_you_sure"
            style="@style/txt_msg_tab"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/color_dark_blue"
            android:paddingLeft="10sp"
            android:text="@string/dialog_stop_msg" />

        <ImageView
            android:layout_margin="10dp"
            android:id="@+id/img_cab_driver"
            android:layout_width="@dimen/dialog_icon_size"
            android:layout_height="@dimen/dialog_icon_size"
            android:layout_marginTop="@dimen/padding"
            android:padding="5sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:src="@drawable/cab_driver" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/padding"
            android:orientation="horizontal" >

            <Button
                android:text="@string/lbl_no"
                android:id="@+id/dialog_btn_no"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                style="@style/login_btn_tab"
                android:background="@color/edt_login"
                />

            <Button
                android:id="@+id/dialog_btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:text="@string/lbl_yes"
                style="@style/login_btn_tab"
                android:background="@color/color_red" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>